# ray-tracing-one-weekend

./: .gitignore  CHANGELOG.md  Makefile  README.md  flake.nix  image.ppm  ray-tracing-one-weekend.cabal  ray-tracing-one-weekend.ps
.github/workflows/: ray-tracing.yaml
app/: Main.hs  config.dhall
benchmarks/: Bench.hs  NFUtils.hs
src/: Camera.hs  Color.hs  Hittable.hs  Material.hs  MaterialHit.hs  MovingSphere.hs  MyLib.hs  Ray.hs  RtWeekend.hs  Sphere.hs  Vec3.hs
test/: SphereSpec.hs  Vec3Spec.hs
