cabal-version:      3.0
name:               ray-tracing-one-weekend
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Zarak
maintainer:         7254237+zarak@users.noreply.github.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
                    , Vec3
                    , Color
                    , Ray
                    , Hittable
                    , Sphere
                    , RtWeekend
                    , Camera
                    , Material 
                    , MaterialHit
    -- other-modules:
    default-extensions: OverloadedRecordDot
                      , NegativeLiterals
                      , OverloadedStrings
    build-depends:    base ^>=4.16.4.0
                    , random
                    , mwc-random
                    , primitive
                    , text
                    , text-format
                    , deepseq
    hs-source-dirs:   src
    default-language: GHC2021

executable ray-tracing-one-weekend
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        ray-tracing-one-weekend

    hs-source-dirs:   app
    default-language: GHC2021

test-suite ray-tracing-one-weekend-test
    import:           warnings
    default-language: GHC2021
    other-modules:    Vec3Spec
                    , SphereSpec
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base ^>=4.16.4.0,
        ray-tracing-one-weekend,
        hspec,
        QuickCheck

benchmark ray-tracing-one-weekend-bench 
    type:             exitcode-stdio-1.0
    main-is: Bench.hs 
    other-modules: NFUtils
    hs-source-dirs: benchmarks
    build-depends:
        base ^>=4.16.4.0
      , criterion
      , deepseq
      , ray-tracing-one-weekend
      , mwc-random
      , random
    default-language: GHC2021
